<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABOUT"
                android:textColor="@color/teal"
                android:textSize="30dp"
                android:layout_gravity="center"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoprofil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/fp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:textColor="@color/teal"
                android:layout_gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelas"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>